--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "homepage,
+  "name": "homepage",
   "compatibility_date": "2025-09-08",
     "assets": {
       "directory": "./_site"
